  - ltlcross, ltldo, and autcross learned shorthands to call
    delag, ltl2dra, ltl2dgra, and nba2dpa.

  - When autfilt is asked to build a Büchi automaton from
    of a chain of many products, as in
    "autfilt -B --product 1.hoa ... --product n.hoa in.hoa"
    then it will automatically degeneralize the intermediate
    product to avoid exceeding the number of supported
    acceptance sets.

  - genltl learned to generate three new families of formulas:
      --sejk-j=RANGE         (GFa1&...&GFan) -> (GFb1&...&GFbn)
      --sejk-k=RANGE         (GFa1|FGb1)&...&(GFan|FGbn)
      --sejk-patterns[=RANGE]   φ₁,φ₂,φ₃ from Sikert et al's [CAV'16]
                             paper (range should be included in 1..3)

  Library:

  - spot::twa_graph::merge_states() is a new method that merges states
    with the exact same outgoing edges. As it performs no reordering of
    the edges, it is better to call it when you know that the edges in
    the twa_graph are sorted (e.g. after a call to merge_edges()).

  - You can now specify to Spot the number of acceptance marks you
    wish to use. This is a compile-time option, accessible through
    option --enable-max-accsets of the configure script. The default
    is still 32, but this limit is no longer hardcoded.

  - Option "a" of print_dot(), for printing the acceptance condition,
    is now enabled by default.  Option "A", introduced in Spot 2.4,
    can be used to hide the acceptance condition in case you do not
    want it.  This change of course affects the --dot option of all
    the command-line tools, as well as the various way to display
    automata using the Python bindings.

  - When option "1" is passed to print_dot() to hide state names
    and force the display of state numbers, the actual state names
    is now moved to the "tooltip" field of the state.  The SVG
    files produced by "dot -Tsvg" will show those as popups.
    This is also done for state labels of kripke structures.
