@@ -24,7 +24,8 @@ set -e
 # Make sure the name of each pattern is correctly output by %F.
 opts=`genltl --help | sed -n '/=RANGE/{
 s/^ *//
-s/[=[].*/=1/p
+s/=RANGE\[\?,RANGE.*/=1,1/p
+s/\[\?=RANGE.*/=1/p
 }'`
 res=`genltl $opts --format="--%F=%L"`
 test "$opts" = "$res"
@@ -95,26 +96,37 @@ genltl --dac=1..5 --eh=1..5 >output2
 diff output output2
 
 genltl --tv-f1=1:3 --tv-f2=1:3 --tv-g1=1:3 --tv-g2=1:3 --tv-uu=1:3 \
-       --format=%F,%L,%f >output
+       --sejk-f='0:2,0:3' --format='%F,"%L",%f' >output
 cat >expected <<EOF
-tv-f1,1,G(p -> q)
-tv-f1,2,G(p -> (q | Xq))
-tv-f1,3,G(p -> (q | Xq | XXq))
-tv-f2,1,G(p -> q)
-tv-f2,2,G(p -> (q | Xq))
-tv-f2,3,G(p -> (q | X(q | Xq)))
-tv-g1,1,G(p -> q)
-tv-g1,2,G(p -> (q & Xq))
-tv-g1,3,G(p -> (q & Xq & XXq))
-tv-g2,1,G(p -> q)
-tv-g2,2,G(p -> (q & Xq))
-tv-g2,3,G(p -> (q & X(q & Xq)))
-tv-uu,1,G(p1 -> (p1 U p2))
-tv-uu,2,G(p1 -> (p1 U (p2 & (p2 U p3))))
-tv-uu,3,G(p1 -> (p1 U (p2 & (p2 U (p3 & (p3 U p4))))))
+tv-f1,"1",G(p -> q)
+tv-f1,"2",G(p -> (q | Xq))
+tv-f1,"3",G(p -> (q | Xq | XXq))
+tv-f2,"1",G(p -> q)
+tv-f2,"2",G(p -> (q | Xq))
+tv-f2,"3",G(p -> (q | X(q | Xq)))
+tv-g1,"1",G(p -> q)
+tv-g1,"2",G(p -> (q & Xq))
+tv-g1,"3",G(p -> (q & Xq & XXq))
+tv-g2,"1",G(p -> q)
+tv-g2,"2",G(p -> (q & Xq))
+tv-g2,"3",G(p -> (q & X(q & Xq)))
+tv-uu,"1",G(p1 -> (p1 U p2))
+tv-uu,"2",G(p1 -> (p1 U (p2 & (p2 U p3))))
+tv-uu,"3",G(p1 -> (p1 U (p2 & (p2 U (p3 & (p3 U p4))))))
+sejk-f,"0,0",GFa0 U b
+sejk-f,"0,1",GFa0 U Xb
+sejk-f,"0,2",GFa0 U XXb
+sejk-f,"0,3",GFa0 U XXXb
+sejk-f,"1,0",GFa1 U G(GFa0 U b)
+sejk-f,"1,1",GFa1 U G(GFa0 U Xb)
+sejk-f,"1,2",GFa1 U G(GFa0 U XXb)
+sejk-f,"1,3",GFa1 U G(GFa0 U XXXb)
+sejk-f,"2,0",GFa2 U G(GFa1 U G(GFa0 U b))
+sejk-f,"2,1",GFa2 U G(GFa1 U G(GFa0 U Xb))
+sejk-f,"2,2",GFa2 U G(GFa1 U G(GFa0 U XXb))
+sejk-f,"2,3",GFa2 U G(GFa1 U G(GFa0 U XXXb))
 EOF
 diff output expected
-
 
 genltl --kr-n2=1..2 --kr-nlogn=1..2 --kr-n=1..2 --gxf-and=0..3 --fxg-or=0..3 \
        --format=%F=%L,%f |
